--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <img id="car" alt="car" src="images/f1.svg">
+  <img id="car" class="turn0" alt="car" src="images/f1.svg">
   <script src="main.js"></script>
 </body>
 </html>
